--- a/Create_From_Basic/Style_Sothich.css
+++ b/Create_From_Basic/Style_Sothich.css
@@ -1,9 +1,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #3498db;
+    
 }
 
 table {
+    width: 80%;
     background-color: #ffffff;
     border-collapse: collapse; 
 }
