--- a/Case_Study1/bai_Style_CaseStudy.css
+++ b/Case_Study1/bai_Style_CaseStudy.css
@@ -6,6 +6,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: roboto condensed,helvetica ,Helvetica,Arial,sans-serif;
 }
 
 .col-1 {
@@ -68,28 +69,28 @@ body {
 }
 
 .container-navbar {
-
+    
     position: fixed;
     width: 100%;
     padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    background-color: #4bcffa;
+    background-color: #9fb5be;
 }
-
 .logo {
+    font-size: 35px;
+    font-family: Impact;
     list-style-type: none;
-    padding-top: 5px;
+    margin: 0;
+    padding: 0;
     text-align: center;
 
 }
-
 .logo li a {
-
     text-decoration: none;
 }
 
 
 .text-left {
+    font-size: 20px;
     text-align: left;
 }
 
@@ -119,18 +120,18 @@ body {
     padding-right: 3rem;
 }
 
-.btn {
+.btn-login {
     cursor: pointer;
     border: 0;
     border-radius: 6px;
     font-weight: 600;
-    width: 80px;
-    height: 25px;
+    width: 90px;
+    height: 35px;
     color: aliceblue;
     background-color: #8b5ee0;
 }
 
-.btn:hover {
+.btn-login:hover {
     color: white;
     box-shadow: 0 0 20px rgba(104, 85, 224, 0.6);
     background-color: rgba(104, 85, 224, 1);
@@ -147,22 +148,22 @@ body {
     float: left;
     list-style: none;
     margin: 0;
-    
+    padding: 0;
 }
 
 .menu li a {
     width: 100px;
-    height: 30px;
+    height: 50px;
     display: block;
     text-align: center;
     line-height: 30px;
-    background-color: #4bcffa;
+    background-color: #9fb5be;
 }
 
 .menu ul ul li a {
-    width: 200px;
+    width: 300px;
+    padding-left: 35px;
     text-align: left;
-    padding-left: 10px;
 }
 
 .menu li a:hover {
@@ -180,6 +181,7 @@ body {
     visibility: visible;
 }
 
+
 .text-white {
     color: rgb(248, 0, 0);
 }
@@ -189,7 +191,7 @@ body {
 }
 
 .container-main {
-    padding-top: 50px;
+    padding-top: 60px;
     display: flex;
 }
 
@@ -203,7 +205,7 @@ body {
 
 .item-1 {
     background-color: rgb(223, 125, 34);
-    flex: 20%;
+    flex: 10%;
     display: flex;
 
 }
@@ -268,20 +270,17 @@ body {
 }
 
 .main {
-    flex: 80%;
+    flex: 70%;
     display: grid;
     height: 100%;
     grid-template-columns: auto auto auto auto;
-    grid-gap: 10px;
-    background-color: green;
-    padding: 10px;
+    grid-gap: 4px;
+    background-color: rgb(165, 214, 51);
+    padding: 0;
 }
 
 .box {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    padding: 20px 0;
-    font-size: 20px;
+   background-color: #3498db;
 }
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -295,15 +294,70 @@ body {
 }
 
 img {
+    height: 400px;
   border-radius: 5px 5px 0 0;
+  
 }
 
 .container-name {
   padding: 2px 16px;
 
 }
+.name-item {
+    font-weight: 700;
+    margin-top: -13px;
+    text-align: center;
+    font-size: 14px;
+    
+}
+.cuong {
+    text-decoration: none;
+    margin-top: 100px;
+}
+.price {
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.price .old {
+    text-decoration: line-through;
+}
+.btn-buy {
+    padding: 0;
+    margin: 10px 0 0 0;
+    text-decoration: none;
+    font-weight: bold;
+    width: 30%;
+    height: 30px;
+    background-color: #e4d763;
+    border: 1px solid black;
+}
+.btn-buy a{
+    text-decoration: none;
+    color: red;
+}
+.btn-buy:hover {
+    cursor: pointer;
+    background-color: #997bcf;
+}
 
+.Ad {
+    background-color: rgb(18, 119, 158);
+    flex: 10%;
+    display: flex;
+    height: 100%;
+}
+.box-Ad {
+    
+    
+}
+.Ad-1 {
+    width: 100%;
+    height: 100%;
+}
 footer {
-    background-color: bisque;
+    
+    clear: both;
+    background-color: rgb(230, 131, 11);
     height: 400px;
 }
