--- a/Case_Study1/bai_Style_CaseStudy.css
+++ b/Case_Study1/bai_Style_CaseStudy.css
@@ -1,12 +1,11 @@
 * {
     box-sizing: border-box;
-
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: roboto condensed,helvetica ,Helvetica,Arial,sans-serif;
+    font-family: roboto condensed, helvetica, Helvetica, Arial, sans-serif;
 }
 
 .col-1 {
@@ -69,12 +68,12 @@ body {
 }
 
 .container-navbar {
-    
     position: fixed;
     width: 100%;
     padding-top: 0.5rem;
     background-color: #9fb5be;
 }
+
 .logo {
     font-size: 35px;
     font-family: Impact;
@@ -82,12 +81,11 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-
 }
+
 .logo li a {
     text-decoration: none;
 }
-
 
 .text-left {
     font-size: 20px;
@@ -181,7 +179,6 @@ body {
     visibility: visible;
 }
 
-
 .text-white {
     color: rgb(248, 0, 0);
 }
@@ -196,7 +193,6 @@ body {
 }
 
 .item {
-    
     height: 500px;
     background-color: rgb(92, 142, 185);
     display: flex;
@@ -207,33 +203,34 @@ body {
     background-color: rgb(223, 125, 34);
     flex: 10%;
     display: flex;
-
 }
-.box-menu{
+
+.box-menu {
     margin: 0;
     padding: 0;
     display: flex;
-    
 }
-.icon{
+
+.icon {
     padding: 0 0 0 15px;
     text-align: left;
     flex-grow: 1;
     font-size: 15px;
-    
 }
-.text-icon{ 
+
+.text-icon {
     text-align: left;
     flex-grow: 5;
-    
 }
-.box-tt1{
+
+.box-tt1 {
     padding: 0 0 0 10px;
     text-align: left;
     flex-grow: 9;
     font-size: 15px;
 }
-.box-tt2{ 
+
+.box-tt2 {
     text-align: right;
     flex-grow: 1;
 }
@@ -242,27 +239,28 @@ body {
     width: 45px;
     padding: 0;
     color: #050505;
-    
+
     margin: 0 5px 0 0;
     background-color: #8b5ee0;
     border: 1px solid transparent;
 }
+
 .btn-menu:hover {
     cursor: pointer;
 }
 
 .item-menu {
-    
     background-color: #8b5ee0;
     color: rgb(0, 0, 0);
     width: 100%;
-    text-align:left;
+    text-align: left;
     line-height: 55px;
     font-size: 10px;
     border-radius: 2;
     border: 1px solid rgb(32, 26, 26);
     box-shadow: 0 0 20px rgba(226, 100, 15, 0.6);
 }
+
 .text-menu {
     text-align: center;
     padding: 0, 0, 0, 100px;
@@ -280,48 +278,51 @@ body {
 }
 
 .box {
-   background-color: #3498db;
+    background-color: #3498db;
 }
+
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 100%;
-  border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 100%;
+    border-radius: 5px;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 img {
     height: 400px;
-  border-radius: 5px 5px 0 0;
-  
+    border-radius: 5px 5px 0 0;
 }
 
 .container-name {
-  padding: 2px 16px;
-
+    padding: 2px 16px;
 }
+
 .name-item {
     font-weight: 700;
     margin-top: -13px;
     text-align: center;
     font-size: 14px;
-    
 }
+
 .cuong {
     text-decoration: none;
     margin-top: 100px;
 }
+
 .price {
     font-size: 14px;
     text-align: center;
     margin-bottom: 10px;
 }
+
 .price .old {
     text-decoration: line-through;
 }
+
 .btn-buy {
     padding: 0;
     margin: 10px 0 0 0;
@@ -332,10 +333,12 @@ img {
     background-color: #e4d763;
     border: 1px solid black;
 }
-.btn-buy a{
+
+.btn-buy a {
     text-decoration: none;
     color: red;
 }
+
 .btn-buy:hover {
     cursor: pointer;
     background-color: #997bcf;
@@ -347,17 +350,36 @@ img {
     display: flex;
     height: 100%;
 }
-.box-Ad {
-    
-    
-}
+
+.box-Ad {}
+
 .Ad-1 {
     width: 100%;
     height: 100%;
 }
-footer {
-    
+
+.footer-container {
     clear: both;
-    background-color: rgb(230, 131, 11);
-    height: 400px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    padding: 0;
+}
+.policy {
+    background-color: rgba(226, 223, 223, 0.8);
+    padding: 20px 0;
+    padding-left: 80px;
+    font-size: 10px;
+}
+.policy ul li {
+    font-size: 15px;
+}
+.text-policy-title {
+    padding-left: 22px;  
+}
+.text-title-ad{
+    font-size: 12px;
+}
+.item-policy3 {
+   font-size: 12px;
 }
