--- a/Case_Study1/bai_Style_CaseStudy.css
+++ b/Case_Study1/bai_Style_CaseStudy.css
@@ -71,7 +71,7 @@ body {
     position: fixed;
     width: 100%;
     padding-top: 0.5rem;
-    background-color: #9fb5be;
+    background-color: #494f6f;
 }
 
 .logo {
@@ -84,6 +84,7 @@ body {
 }
 
 .logo li a {
+    color: #6dc21e;
     text-decoration: none;
 }
 
@@ -106,7 +107,8 @@ body {
 }
 
 .navbar li a {
-    color: #1e272e;
+    color: #000000;
+    font-weight: 400;
     text-decoration: none;
 }
 
@@ -119,12 +121,14 @@ body {
 }
 
 .btn-login {
+    text-align: center;
     cursor: pointer;
     border: 0;
     border-radius: 6px;
-    font-weight: 600;
-    width: 90px;
-    height: 35px;
+    font-weight: 900;
+    font-size: 12px;
+    width: 100px;
+    height: 40px;
     color: aliceblue;
     background-color: #8b5ee0;
 }
@@ -155,7 +159,7 @@ body {
     display: block;
     text-align: center;
     line-height: 30px;
-    background-color: #9fb5be;
+    background-color: #494f6f;
 }
 
 .menu ul ul li a {
@@ -200,7 +204,7 @@ body {
 }
 
 .item-1 {
-    background-color: rgb(223, 125, 34);
+    background-color: rgb(255, 255, 255);
     flex: 10%;
     display: flex;
 }
@@ -211,11 +215,11 @@ body {
     display: flex;
 }
 
-.icon {
-    padding: 0 0 0 15px;
+.fas {
+    padding: 0 0 0 10px;
     text-align: left;
-    flex-grow: 1;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .text-icon {
@@ -235,13 +239,32 @@ body {
     flex-grow: 1;
 }
 
+.title-scroll {
+    font-size: 16px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+
+.scroll {
+    border: 1px solid rgb(0, 0, 0);
+    padding-bottom: 408px;
+    margin-top: 5px;
+    height: 20px;
+    overflow: auto;
+}
+
+.container-sroll {
+    display: block;
+    padding: 10px;
+}
+
 .btn-menu {
     width: 45px;
     padding: 0;
     color: #050505;
-
     margin: 0 5px 0 0;
-    background-color: #8b5ee0;
+    background-color: #f1f2f6;
     border: 1px solid transparent;
 }
 
@@ -250,7 +273,7 @@ body {
 }
 
 .item-menu {
-    background-color: #8b5ee0;
+    background-color: #f1f2f6;
     color: rgb(0, 0, 0);
     width: 100%;
     text-align: left;
@@ -258,7 +281,7 @@ body {
     font-size: 10px;
     border-radius: 2;
     border: 1px solid rgb(32, 26, 26);
-    box-shadow: 0 0 20px rgba(226, 100, 15, 0.6);
+    box-shadow: 0 0 20px rgba(75, 62, 54, 0.6);
 }
 
 .text-menu {
@@ -273,12 +296,12 @@ body {
     height: 100%;
     grid-template-columns: auto auto auto auto;
     grid-gap: 4px;
-    background-color: rgb(165, 214, 51);
+    background-color: #688294;
     padding: 0;
 }
 
 .box {
-    background-color: #3498db;
+    background-color: ;
 }
 
 .card {
@@ -308,11 +331,6 @@ img {
     font-size: 14px;
 }
 
-.cuong {
-    text-decoration: none;
-    margin-top: 100px;
-}
-
 .price {
     font-size: 14px;
     text-align: center;
@@ -330,32 +348,79 @@ img {
     font-weight: bold;
     width: 30%;
     height: 30px;
-    background-color: #e4d763;
+    background-color: #000000;
     border: 1px solid black;
 }
 
 .btn-buy a {
     text-decoration: none;
-    color: red;
+    color: white;
 }
 
 .btn-buy:hover {
     cursor: pointer;
-    background-color: #997bcf;
+    background-color: #0652DD;
 }
 
 .Ad {
-    background-color: rgb(18, 119, 158);
+    background-color: #95afc0;
     flex: 10%;
     display: flex;
     height: 100%;
 }
 
-.box-Ad {}
+.box-Ad {
+    height: 200px;
+}
 
 .Ad-1 {
     width: 100%;
     height: 100%;
+}
+
+.title-prod {
+    font-size: 18px;
+    font-weight: 900;
+    padding: 14.5px;
+    cursor: pointer;
+
+}
+
+.title-prod {
+    color: white;
+    text-decoration: none;
+    background: black;
+    padding: 5px;
+    width: 100%;
+    text-align: center;
+}
+
+.title-prod {
+    animation: colorBackground 0.5s infinite;
+    -webkit-animation: colorBackground 5s infinite;
+    -moz-animation: colorBackground 5s infinite;
+    -o-animation: colorBackground 0.5s infinite
+}
+
+@keyframes colorBackground {
+    0% {
+        background-color: yellowgreen;
+        color: white;
+    }
+
+    50% {
+        background-color: red;
+        color: yellow;
+    }
+}
+
+.title-prod:hover {
+    background: yellow;
+    color: red;
+}
+
+.title-prod:active {
+    background: green;
 }
 
 .footer-container {
@@ -365,21 +430,26 @@ img {
     padding: 10px;
     padding: 0;
 }
+
 .policy {
     background-color: rgba(226, 223, 223, 0.8);
     padding: 20px 0;
     padding-left: 80px;
     font-size: 10px;
 }
+
 .policy ul li {
     font-size: 15px;
 }
+
 .text-policy-title {
-    padding-left: 22px;  
+    padding-left: 22px;
 }
-.text-title-ad{
+
+.text-title-ad {
     font-size: 12px;
 }
+
 .item-policy3 {
-   font-size: 12px;
+    font-size: 12px;
 }
